fixed the grid layout

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         }
     </style>
 </head>
-<body class="grid mx-auto bg-[#f4f6f8] w-full max-w-[520px]">
-    <section class=" bg-white border border-gray-200 rounded-xl p-6 shadow-[0_8px_24px_rgba(17,24,39,0.08)] text-[#111827] min-h-[100vh] p-6 place-items-center">
+<body class=" bg-[#f4f6f8] ">
+    <section class="grid mx-auto w-full max-w-[520px] bg-white border border-gray-200 rounded-xl p-6 shadow-[0_8px_24px_rgba(17,24,39,0.08)] text-[#111827] min-h-[100vh] p-6 place-items-center">
         <label for="weightInput" class="block text-sm font-semibold mt-[14px] mb-[6px] mx-0 text-[#374151]">Your weight:</label>
         <input class="w-full p-3 rounded-lg border border-[#d1d5db] text-base outline-none focus:ring-[0_0_0_3px_rgba(37,99,235,0.15)] focus:ring-0 focus:border-[#2563eb]" id="weightInput" type="text" placeholder="Your weight is..." />
         <label for="heightInput" class="block text-sm font-semibold mt-[14px] mb-[6px] mx-0 text-[#374151]">Your height:</label>
